...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Would You Rather" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="Ajv-vO-vd8">
                        <barButtonItem key="backBarButtonItem" title="Main-Menu" id="R5c-Vc-JxX"/>
                        <barButtonItem key="rightBarButtonItem" title="Skip" id="fHu-rc-Q3N">
                            <connections>
                                <action selector="skipNextAction:" destination="BYZ-38-t0r" id="3HH-Kt-tu8"/>
...
                                        <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="31"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Play">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="30"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="History">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="30"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Options">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="About" id="1kb-XY-Lfb">
                        <leftBarButtonItems>
                            <barButtonItem title="Back" id="VJl-V7-c2G">
                                <connections>
                                    <segue destination="YbE-us-b8A" kind="show" id="oJd-tj-riV"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Prefrences" style="done" id="7Q2-pV-Ai5">
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </barButtonItem>
...
                                        <color key="backgroundColor" red="0.98460525269999999" green="0.70476967099999999" blue="0.2272706032" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="30"/>
                                        <state key="normal" title="Contact">
                                            <color key="titleColor" systemColor="darkTextColor"/>
                                        </state>
...
