...
  @IBOutlet weak var skipNextBarButton: UIBarButtonItem!
  
  ///MARK: - IBActions
  @IBAction func topQuestionButton(_ sender: Any) {
    topQuestionImageView.image = UIImage.init(named: "green check")
    bottomQuestionImageView.image = UIImage.init(named: "red x circle")
    skipNextBarButton.title = "Next"
    self.topQuestionImageView.isHidden = false
    self.bottomQuestionImageView.isHidden = false
    
  }
  @IBAction func bottomQuestionButton(_ sender: Any) {
    bottomQuestionImageView.image = UIImage.init(named: "green check")
...
